<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro"
        android:text="@string/nome"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/intro"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@id/tvNome"
        android:layout_marginStart="40dp"
        android:hint="@string/placeholder"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tvTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNome"
        android:text="@string/telefone"
        android:layout_alignStart="@id/tvNome"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/tvNome"
        android:layout_toEndOf="@id/tvTelefone"
        android:layout_alignStart="@id/tvUsername"
        android:hint="@string/hintTelefone"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:maxLength="11"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <RadioGroup
        android:id="@+id/rgMododeUso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTelefone"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/modoUso"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <RadioButton
            android:id="@+id/rbMotorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motorista"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <RadioButton
            android:id="@+id/rbPassageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passageiro"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:layout_below="@id/rgMododeUso"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>